--- a/vlctest/Properties/Resources.resx
+++ b/vlctest/Properties/Resources.resx
@@ -136,4 +136,10 @@
   <data name="rt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="学生" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\学生.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="老师" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\老师.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
